modificado para pijuras

--- a/index.html
+++ b/index.html
@@ -20,124 +20,124 @@
             <a href="#">Contacto</a>
         </nav>
         <section class="textos-header">
-            <h1>Potencia tus ventas al menos un 200%</h1>
-            <h2>Con una p&aacute;gina web potente</h2>
+            <h1>Este es un test para que lo miren</h1>
+            <h2>Las quiero muxxo pijuras</h2>
         </section>
         <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 351.77,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #ffff;"></path></svg></div>
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">Nuestro producto</h2>
+            <h2 class="titulo">Hola pe presento</h2>
             <div class="contenedor-sobre-nosotros">
                 <img loading: "lazy" src="img/ilustracion1.png" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
-                    <h3><span>1</span>Los mejores productos</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa quis suscipit sint ipsum eum fugiat, eligendi, rerum delectus unde mollitia praesentium aspernatur qui maxime quia, voluptatem a provident doloribus enim.</p>
-                    <h3><span>2</span>Los mejores productos</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa quis suscipit sint ipsum eum fugiat, eligendi, rerum delectus unde mollitia praesentium aspernatur qui maxime quia, voluptatem a provident doloribus enim.</p>
+                    <h3><span>1</span>Acabo d aprender</h3>
+                    <p>algo nuevo, c llama Github y con &eacute;l podemos trabajar en un mismo proyecto pero no como le haciamos antes. Esto d hecho es m&aacute;s r&aacute;pido.</p>
+                    <h3><span>2</span>Ocupo q sigamos haciendo</h3>
+                    <p>P&aacute;ginas web, la vdd no me aburro para nada y esta p&aacute;gina esta perrushka, aprend&iacute; nuevas mmdas para meterle, nom&aacute;s me falta Javascript y conectar las bases de datos.</p>
                 </div>
             </div>
         </section>
         <section class="portafolio">
             <div class="contenedor">
-                <h2 class="titulo">Portafolio</h2>
+                <h2 class="titulo">Fotitos</h2>
                 <div class="galeria-port">
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img1.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img2.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img3.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img4.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img5.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img6.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img7.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                     <div class="imagen-port">
                         <img loading: "lazy" src="/img/img8.jpg" alt="">
                         <div class="hover-galeria">
                             <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>Nuestro trabajo</p>
+                            <p>P&oacute;nganse a estudiar</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
         <section class="clients contenedor">
-            <h2 class="titulo">Qu&eacute; dicen nuestros clientes</h2>
+            <h2 class="titulo">Oye Susana, te pasaste y no hicimos yamada</h2>
             <div class="cards">
                 <div class="card">
                     <img loading: "lazy" src="/img/perfil1.jpg" alt="">
                     <div class="contenido-texto-card">
-                        <h4>Name</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, similique.</p>
+                        <h4>Gianl0ko</h4>
+                        <p>Un niño k no tiene nada q hacer con su vida y se pone a programar. Taloko</p>
                     </div>
                 </div>
                 <div class="card">
                     <img loading: "lazy" src="/img/perfil2.jpg" alt="">
                     <div class="contenido-texto-card">
-                        <h4>Name</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, similique.</p>
+                        <h4>Richi</h4>
+                        <p>Ese bato no se le ve desde que entr&oacute; a prepa, biejo traidor</p>
                     </div>
                 </div>
             </div>
         </section>
         <section class="about-services">
             <div class="contenedor">
-                <h2 class="titulo">Nuestros servicios</h2>
+                <h2 class="titulo">Unas fotitos y descritsiones</h2>
                 <div class="servicio-cont">
                     <div class="servicio-ind">
                         <img loading: "lazy" src="/img/ilustracion2.png" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, necessitatibus?</p>
+                        <h3>Todo estar&aacute; bien</h3>
+                        <p>No se desesperen compitas, ya mero salimos, ya estan empezando a abrir las tiendas</p>
                     </div>
                     <div class="servicio-ind">
                         <img loading: "lazy" src="/img/ilustracion3.png" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, necessitatibus?</p>
+                        <h3>Escuchen musiK</h3>
+                        <p>Yo ando to loco con wallows, tienen rolitas mui padres y ya c acabo 13 reasons why :c</p>
                     </div>
                     <div class="servicio-ind">
                         <img loading: "lazy" src="/img/ilustracion4.png" alt="">
-                        <h3>Name</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae, necessitatibus?</p>
+                        <h3>Biejas jetonas, hagan algo d provecho</h3>
+                        <p>Tienen q decirme q aprendieron algo padre cuando volvamos</p>
                     </div>
                 </div>
             </div>
