--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
     </header>
     <main>
         <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">Hola pe presento</h2>
+            <h2 class="titulo">Hola me presento</h2>
             <div class="contenedor-sobre-nosotros">
                 <img loading: "lazy" src="img/ilustracion1.png" alt="" class="imagen-about-us">
                 <div class="contenido-textos">
                     <h3><span>1</span>Acabo d aprender</h3>
                     <p>algo nuevo, c llama Github y con &eacute;l podemos trabajar en un mismo proyecto pero no como le haciamos antes. Esto d hecho es m&aacute;s r&aacute;pido.</p>
                     <h3><span>2</span>Ocupo q sigamos haciendo</h3>
-                    <p>P&aacute;ginas web, la vdd no me aburro para nada y esta p&aacute;gina esta perrushka, aprend&iacute; nuevas mmdas para meterle, nom&aacute;s me falta Javascript y conectar las bases de datos.</p>
+                    <p>P&aacute;ginas web, la vdd no me aburro para nada y esta p&aacute;gina esta perrushka, aprend&iacute; nuevas mmdas para meterle, nom&aacute;s me falta Javascript y conectar las bases de datos. Piquenle a las fotonas:)</p>
                 </div>
             </div>
         </section>
