--- a/index.html
+++ b/index.html
@@ -1,165 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Najeragim</title>
-    <link rel="stylesheet" href="/css/estilos.css">
-    <link rel="shortcut icon" href="/img/icono.png" type="image/x-icon">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-</head>
+    <link rel="stylesheet" href="/css/sass/estilos.css" />
+    <link rel="shortcut icon" href="/img/icono.png" type="image/x-icon" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/3fdf7e0ee0.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <a href="#">Inicio</a>
-            <a href="#">Acerca de</a>
-            <a href="#">Portafolio</a>
-            <a href="#">Servicios</a>
-            <a href="#">Contacto</a>
-        </nav>
-        <section class="textos-header">
-            <h1>Este es un test para que lo miren</h1>
-            <h2>Las quiero muxxo pijuras</h2>
-        </section>
-        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 351.77,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #ffff;"></path></svg></div>
+      <nav>
+        <a href="#">Inicio</a>
+        <a href="#">Acerca de</a>
+        <a href="#">Portafolio</a>
+        <a href="#">Servicios</a>
+        <a href="#">Contacto</a>
+        <button class="switch" id="switch">
+          <span><i class="fas fa-sun"></i></span>
+          <span><i class="fas fa-moon"></i></span>
+        </button>
+      </nav>
+      <section class="textos-header">
+        <h1>Este es un test para que lo miren</h1>
+        <h2>Las quiero muxxo pijuras</h2>
+      </section>
+      <div class="wave">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none">
+          <path
+            d="M0.00,49.98 C149.99,150.00 351.77,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+          ></path>
+        </svg>
+      </div>
     </header>
     <main>
-        <section class="contenedor sobre-nosotros">
-            <h2 class="titulo">Hola me presento</h2>
-            <div class="contenedor-sobre-nosotros">
-                <img loading: "lazy" src="img/ilustracion1.png" alt="" class="imagen-about-us">
-                <div class="contenido-textos">
-                    <h3><span>1</span>Acabo d aprender</h3>
-                    <p>algo nuevo, c llama Github y con &eacute;l podemos trabajar en un mismo proyecto pero no como le haciamos antes. Esto d hecho es m&aacute;s r&aacute;pido.</p>
-                    <h3><span>2</span>Ocupo q sigamos haciendo</h3>
-                    <p>P&aacute;ginas web, la vdd no me aburro para nada y esta p&aacute;gina esta perrushka, aprend&iacute; nuevas mmdas para meterle, nom&aacute;s me falta Javascript y conectar las bases de datos. Piquenle a las fotonas:)</p>
-                </div>
+      <section class="contenedor sobre-nosotros">
+        <h2 class="titulo">Hola me presento</h2>
+        <div class="contenedor-sobre-nosotros">
+          <img loading: "lazy" src="img/ilustracion1.png" alt=""
+          class="imagen-about-us">
+          <div class="contenido-textos">
+            <h3><span>1</span>Acabo d aprender</h3>
+            <p>
+              algo nuevo, c llama Github y con &eacute;l podemos trabajar en un
+              mismo proyecto pero no como le haciamos antes. Esto d hecho es
+              m&aacute;s r&aacute;pido.
+            </p>
+            <h3><span>2</span>Ocupo q sigamos haciendo</h3>
+            <p>
+              P&aacute;ginas web, la vdd no me aburro para nada y esta
+              p&aacute;gina esta perrushka, aprend&iacute; nuevas mmdas para
+              meterle, nom&aacute;s me falta Javascript y conectar las bases de
+              datos. Piquenle a las fotonas:)
+            </p>
+          </div>
+        </div>
+      </section>
+      <section class="portafolio">
+        <div class="contenedor">
+          <h2 class="titulo">Fotitos</h2>
+          <div class="galeria-port">
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img1.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
             </div>
-        </section>
-        <section class="portafolio">
-            <div class="contenedor">
-                <h2 class="titulo">Fotitos</h2>
-                <div class="galeria-port">
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img1.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img2.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img3.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img4.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img5.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img6.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img7.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                    <div class="imagen-port">
-                        <img loading: "lazy" src="/img/img8.jpg" alt="">
-                        <div class="hover-galeria">
-                            <img loading: "lazy" src="/img/corazonIcono.png" alt="">
-                            <p>P&oacute;nganse a estudiar</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img2.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
             </div>
-        </section>
-        <section class="clients contenedor">
-            <h2 class="titulo">Oye Susana, te pasaste y no hicimos yamada</h2>
-            <div class="cards">
-                <div class="card">
-                    <img loading: "lazy" src="/img/perfil1.jpg" alt="">
-                    <div class="contenido-texto-card">
-                        <h4>Gianl0ko</h4>
-                        <p>Un niño k no tiene nada q hacer con su vida y se pone a programar. Taloko</p>
-                    </div>
-                </div>
-                <div class="card">
-                    <img loading: "lazy" src="/img/perfil2.jpg" alt="">
-                    <div class="contenido-texto-card">
-                        <h4>Richi</h4>
-                        <p>Ese bato no se le ve desde que entr&oacute; a prepa, biejo traidor</p>
-                    </div>
-                </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img3.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
             </div>
-        </section>
-        <section class="about-services">
-            <div class="contenedor">
-                <h2 class="titulo">Unas fotitos y descritsiones</h2>
-                <div class="servicio-cont">
-                    <div class="servicio-ind">
-                        <img loading: "lazy" src="/img/ilustracion2.png" alt="">
-                        <h3>Todo estar&aacute; bien</h3>
-                        <p>No se desesperen compitas, ya mero salimos, ya estan empezando a abrir las tiendas</p>
-                    </div>
-                    <div class="servicio-ind">
-                        <img loading: "lazy" src="/img/ilustracion3.png" alt="">
-                        <h3>Escuchen musiK</h3>
-                        <p>Yo ando to loco con wallows, tienen rolitas mui padres y ya c acabo 13 reasons why :c</p>
-                    </div>
-                    <div class="servicio-ind">
-                        <img loading: "lazy" src="/img/ilustracion4.png" alt="">
-                        <h3>Biejas jetonas, hagan algo d provecho</h3>
-                        <p>Tienen q decirme q aprendieron algo padre cuando volvamos</p>
-                    </div>
-                </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img4.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
             </div>
-        </section>
-        <footer>
-            <div class="contenedor-footer">
-                <div class="content-foo">
-                    <h4>Phone</h4>
-                    <p>656-298-1852</p>
-                </div>
-                <div class="content-foo">
-                    <h4>Email</h4>
-                    <p>gian.najera25@gmail.com</p>
-                </div>
-                <div class="content-foo">
-                    <h4>Location</h4>
-                    <p>Playa de Arrecifes #2953</p>
-                </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img5.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
             </div>
-            <h2 class="titulo-final">&copy; Najeragim | Gianluca Najera</h2>
-        </footer>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img6.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
+            </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img7.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
+            </div>
+            <div class="imagen-port">
+              <img loading: "lazy" src="/img/img8.jpg" alt="">
+              <div class="hover-galeria">
+                <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+                <p>P&oacute;nganse a estudiar</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="clients contenedor">
+        <h2 class="titulo">Oye Susana, te pasaste y no hicimos yamada</h2>
+        <div class="cards">
+          <div class="card">
+            <img loading: "lazy" src="/img/perfil1.jpg" alt="">
+            <div class="contenido-texto-card">
+              <h4>Gianl0ko</h4>
+              <p>
+                Un niño k no tiene nada q hacer con su vida y se pone a
+                programar. Taloko
+              </p>
+            </div>
+          </div>
+          <div class="card">
+            <img loading: "lazy" src="/img/perfil2.jpg" alt="">
+            <div class="contenido-texto-card">
+              <h4>Richi</h4>
+              <p>
+                Ese bato no se le ve desde que entr&oacute; a prepa, biejo
+                traidor
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="about-services">
+        <div class="contenedor">
+          <h2 class="titulo">Unas fotitos y descritsiones</h2>
+          <div class="servicio-cont">
+            <div class="servicio-ind">
+              <img loading: "lazy" src="/img/ilustracion2.png" alt="">
+              <h3>Todo estar&aacute; bien</h3>
+              <p>
+                No se desesperen compitas, ya mero salimos, ya estan empezando a
+                abrir las tiendas
+              </p>
+            </div>
+            <div class="servicio-ind">
+              <img loading: "lazy" src="/img/ilustracion3.png" alt="">
+              <h3>Escuchen musiK</h3>
+              <p>
+                Yo ando to loco con wallows, tienen rolitas mui padres y ya c
+                acabo 13 reasons why :c
+              </p>
+            </div>
+            <div class="servicio-ind">
+              <img loading: "lazy" src="/img/ilustracion4.png" alt="">
+              <h3>Biejas jetonas, hagan algo d provecho</h3>
+              <p>Tienen q decirme q aprendieron algo padre cuando volvamos</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer>
+        <div class="contenedor-footer">
+          <div class="content-foo">
+            <h4>Phone</h4>
+            <p>656-298-1852</p>
+          </div>
+          <div class="content-foo">
+            <h4>Email</h4>
+            <p>gian.najera25@gmail.com</p>
+          </div>
+          <div class="content-foo">
+            <h4>Location</h4>
+            <p>Playa de Arrecifes #2953</p>
+          </div>
+        </div>
+        <h2 class="titulo-final">&copy; Najeragim</h2>
+      </footer>
     </main>
-</body>
-
+    <script src="/js/main.js"></script>
+  </body>
 </html>
