links para moverse en la pagina

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   </head>
 
   <body>
-    <header>
+    <header id="header">
       <nav>
-        <a href="#">Inicio</a>
-        <a href="#">Acerca de</a>
-        <a href="#">Portafolio</a>
-        <a href="#">Servicios</a>
-        <a href="#">Contacto</a>
+        <a href="#header">Inicio</a>
+        <a href="#contenedor sobre-nosotros">Acerca de</a>
+        <a href="#portafolio">Portafolio</a>
+        <a href="#services">Servicios</a>
+        <a href="#footer">Contacto</a>
         <button class="switch" id="switch">
           <span><i class="fas fa-sun"></i></span>
           <span><i class="fas fa-moon"></i></span>
@@ -42,7 +42,7 @@
       </div>
     </header>
     <main>
-      <section class="contenedor sobre-nosotros">
+      <section class="contenedor sobre-nosotros" id="contenedor sobre-nosotros">
         <h2 class="titulo">Hola me presento</h2>
         <div class="contenedor-sobre-nosotros">
           <img loading: "lazy" src="img/ilustracion1.png" alt=""
@@ -64,7 +64,7 @@
           </div>
         </div>
       </section>
-      <section class="portafolio">
+      <section class="portafolio" id="portafolio">
         <div class="contenedor">
           <h2 class="titulo">Fotitos</h2>
           <div class="galeria-port">
@@ -127,7 +127,7 @@
           </div>
         </div>
       </section>
-      <section class="clients contenedor">
+      <section class="clients contenedor" id="clients">
         <h2 class="titulo">Oye Susana, te pasaste y no hicimos yamada</h2>
         <div class="cards">
           <div class="card">
@@ -152,7 +152,7 @@
           </div>
         </div>
       </section>
-      <section class="about-services">
+      <section class="about-services" id="services">
         <div class="contenedor">
           <h2 class="titulo">Unas fotitos y descritsiones</h2>
           <div class="servicio-cont">
@@ -180,7 +180,7 @@
           </div>
         </div>
       </section>
-      <footer>
+      <footer id="footer">
         <div class="contenedor-footer">
           <div class="content-foo">
             <h4>Phone</h4>
