Correción de funcionalidad

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Najeragim</title>
-  <link rel="stylesheet" href="/css/sass/estilos.css" />
+  <link rel="stylesheet" href="/css/estilos.css" />
   <link rel="shortcut icon" href="/img/icono.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/3fdf7e0ee0.js" crossorigin="anonymous"></script>
