Conexión con otros archivos

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Najeragim</title>
   <link rel="stylesheet" href="css/estilos.css" />
-  <link rel="shortcut icon" href="/img/icono.png" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/icono.png" type="image/x-icon" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet" />
   <script src="https://kit.fontawesome.com/3fdf7e0ee0.js" crossorigin="anonymous"></script>
 </head>
@@ -187,7 +187,7 @@
       <h2 class="titulo-final">&copy; Gianluca Najera</h2>
     </footer>
   </main>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
