Correción de imágenes

--- a/index.html
+++ b/index.html
@@ -62,58 +62,58 @@
         <h2 class="titulo">Fotitos</h2>
         <div class="galeria-port">
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img1.jpg" alt="">
+            <img loading: "lazy" src="img/img1.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img2.jpg" alt="">
+            <img loading: "lazy" src="img/img2.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img3.jpg" alt="">
+            <img loading: "lazy" src="img/img3.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img4.jpg" alt="">
+            <img loading: "lazy" src="img/img4.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img5.jpg" alt="">
+            <img loading: "lazy" src="img/img5.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img6.jpg" alt="">
+            <img loading: "lazy" src="img/img6.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img7.jpg" alt="">
+            <img loading: "lazy" src="img/img7.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
           <div class="imagen-port">
-            <img loading: "lazy" src="/img/img8.jpg" alt="">
+            <img loading: "lazy" src="img/img8.jpg" alt="">
             <div class="hover-galeria">
-              <img loading: "lazy" src="/img/corazonIcono.png" alt="">
+              <img loading: "lazy" src="img/corazonIcono.png" alt="">
               <p>Imagen ejemplar</p>
             </div>
           </div>
@@ -124,7 +124,7 @@
       <h2 class="titulo">Tarjetas de presentaci&oacute;n</h2>
       <div class="cards">
         <div class="card">
-          <img loading: "lazy" src="/img/perfil1.jpg" alt="">
+          <img loading: "lazy" src="img/perfil1.jpg" alt="">
           <div class="contenido-texto-card">
             <h4>Mi perfil</h4>
             <p>
@@ -133,7 +133,7 @@
           </div>
         </div>
         <div class="card">
-          <img loading: "lazy" src="/img/perfil2.webp" alt="">
+          <img loading: "lazy" src="img/perfil2.webp" alt="">
           <div class="contenido-texto-card">
             <h4>Usuario</h4>
             <p>
@@ -148,21 +148,21 @@
         <h2 class="titulo">SVG como imágenes ejemplares</h2>
         <div class="servicio-cont">
           <div class="servicio-ind">
-            <img loading: "lazy" src="/img/ilustracion2.png" alt="">
+            <img loading: "lazy" src="img/ilustracion2.png" alt="">
             <h3>Buen funcionamiento</h3>
             <p>
               de la página web y los complementos utilizados.
             </p>
           </div>
           <div class="servicio-ind">
-            <img loading: "lazy" src="/img/ilustracion3.png" alt="">
+            <img loading: "lazy" src="img/ilustracion3.png" alt="">
             <h3>Con modo oscuro</h3>
             <p>
               para mejor comodidad, así como toma de decisión.
             </p>
           </div>
           <div class="servicio-ind">
-            <img loading: "lazy" src="/img/ilustracion4.png" alt="">
+            <img loading: "lazy" src="img/ilustracion4.png" alt="">
             <h3>Sencilla navegación</h3>
             <p>Sin moverse de la página y dando click a los botones del principio.</p>
           </div>
